(fixup) US_DEV#1_6 : Test passage par des points