@@ -1,5 +1,6 @@
 package fr.ul.miage.projetGL2023.test;
 
+import fr.ul.miage.projetGL2023.algorithme.Algorithme;
 import fr.ul.miage.projetGL2023.model.Liaison;
 import fr.ul.miage.projetGL2023.model.Metro;
 import fr.ul.miage.projetGL2023.model.Station;
@@ -18,170 +19,188 @@ public class test_itineraire_passant_par_liste_point {
     @Test
     @DisplayName("itineraire le plus rapide Station 1 vide")
     public void itinerairePassantListePointStation1Vide(){
+        Metro metro = new Metro();
         Station x =  null;
-        Station y =  new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        List<Station> list = Arrays.asList(Arc_de_Triomphe,Bercy);
-        var trajet= new Metro();
-        assertThatThrownBy(()-> trajet.Itineraire_passant_liste_point(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
+        Station y =  metro.getStations().get(10);
+        Station Passage1 = metro.getStations().get(5);
+        Station Passage2 = metro.getStations().get(7);
+        List<Integer> list = Arrays.asList(Passage1.getNum_station(), Passage2.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        assertThatThrownBy(()-> algorithme.algorithmeSelonPoint(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
     }
     @Test
     @DisplayName("itineraire passant par liste de point Station 2 vide")
     public void itinerairePassantParListeDePointStation2Vide(){
-        Station x =  new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
+        Metro metro = new Metro();
         Station y =  null;
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        List<Station> list = Arrays.asList(Arc_de_Triomphe,Bercy);
-        var trajet= new Metro();
-        assertThatThrownBy(()-> trajet.Itineraire_passant_liste_point(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
+        Station x =  metro.getStations().get(10);
+        Station Passage1 = metro.getStations().get(5);
+        Station Passage2 = metro.getStations().get(7);
+        List<Integer> list = Arrays.asList(Passage1.getNum_station(), Passage2.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        assertThatThrownBy(()-> algorithme.algorithmeSelonPoint(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
     }
     @Test
     @DisplayName("itineraire passant par listes de point les 2 stations vide")
     public void itineraireRapideles2stationVide(){
+        Metro metro = new Metro();
         Station x =  null;
         Station y =  null;
-        Station Arc_de_Triomphe =new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        List<Station> list = Arrays.asList(Arc_de_Triomphe,Bercy);
-        var trajet= new Metro();
-        assertThatThrownBy(()-> trajet.Itineraire_passant_liste_point(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
+        Station Passage1 = metro.getStations().get(5);
+        Station Passage2 = metro.getStations().get(7);
+        List<Integer> list = Arrays.asList(Passage1.getNum_station(), Passage2.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        assertThatThrownBy(()-> algorithme.algorithmeSelonPoint(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     @DisplayName("itineraire passant par liste de point simple (point sur le chemin")
     public void itinerairePassantparListeDePointSimple(){
-        Station chatelet_les_halles = new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Pigalle = new Station("Pigalle",1,2,false,new Liaison(120,false,3), new Liaison(120,false,1),30);
-        Station Montmartre = new Station("Montmartre",1,3,false,new Liaison(90,false,4), new Liaison(120,false,2),30);
-        Station Louvre = new Station("Louvre",1,4,false,new Liaison(150,false,5), new Liaison(90,false,3),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
+        Metro metro = new Metro();
 
-        List<Integer> trajet =  Arrays.asList(chatelet_les_halles.getNum_station(),Pigalle.getNum_station(),Montmartre.getNum_station(),Louvre.getNum_station(),Bercy.getNum_station(),Arc_de_Triomphe.getNum_station());
-        var ln= new Metro();
-        List<Station> list =  Arrays.asList(Montmartre);
-        var result = ln.Itineraire_passant_liste_point(chatelet_les_halles,Arc_de_Triomphe,list);
+        Station chatelet_les_halles = metro.getStations().get(0);
+        Station Pigalle = metro.getStations().get(1);
+        Station Montmartre = metro.getStations().get(2);
+        Station Louvre = metro.getStations().get(3);
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+
+        List<Integer> trajet =  Arrays.asList(chatelet_les_halles.getNum_station(),Pigalle.getNum_station(), Montmartre.getNum_station(),Louvre.getNum_station(),Bercy.getNum_station(),Arc_de_Triomphe.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        List<Integer> list = List.of(Montmartre.getNum_station());
+        List result = algorithme.algorithmeSelonPoint(chatelet_les_halles,Arc_de_Triomphe,list);
         assertThat(result).isEqualTo(trajet);
 
     }
     @Test
     @DisplayName("itineraire passant par liste de point simple 2 ( 2 points sur le chemin")
     public void itineraireListeDePointSimple2(){
-        Station chatelet_les_halles = new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Pigalle = new Station("Pigalle",1,2,false,new Liaison(120,false,3), new Liaison(120,false,1),30);
-        Station Montmartre = new Station("Montmartre",1,3,false,new Liaison(90,false,4), new Liaison(120,false,2),30);
-        Station Louvre = new Station("Louvre",1,4,false,new Liaison(150,false,5), new Liaison(90,false,3),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
+        Metro metro = new Metro();
 
-        List<Integer> trajet =  Arrays.asList(Arc_de_Triomphe.getNum_station(),Bercy.getNum_station(),Louvre.getNum_station(),Montmartre.getNum_station(),Pigalle.getNum_station(),chatelet_les_halles.getNum_station());
-        var ln= new Metro();
-        List<Station> list =  Arrays.asList(Montmartre,Bercy);
-        var result = ln.Itineraire_passant_liste_point(Arc_de_Triomphe,chatelet_les_halles,list);
+        Station chatelet_les_halles = metro.getStations().get(0);
+        Station Pigalle = metro.getStations().get(1);
+        Station Montmartre = metro.getStations().get(2);
+        Station Louvre = metro.getStations().get(3);
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+
+        List<Integer> trajet =  Arrays.asList(Arc_de_Triomphe.getNum_station(),Bercy.getNum_station(),Louvre.getNum_station(),
+                Montmartre.getNum_station(), Louvre.getNum_station(), Bercy.getNum_station(), Arc_de_Triomphe.getNum_station(),
+                Bercy.getNum_station(),Louvre.getNum_station(),Montmartre.getNum_station()
+                ,Pigalle.getNum_station(),chatelet_les_halles.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        List<Integer> list =  Arrays.asList(Montmartre.getNum_station(),Bercy.getNum_station());
+        var result = algorithme.algorithmeSelonPoint(Arc_de_Triomphe,chatelet_les_halles,list);
         assertThat(result).isEqualTo(trajet);
 
     }
     @Test
     @DisplayName("itineraire passant par liste de point simple (1 point à l'opposée)")
     public void itinerairePassantParUnPointOpposée(){
-        Station chatelet_les_halles = new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Pigalle = new Station("Pigalle",1,2,false,new Liaison(120,false,3), new Liaison(120,false,1),30);
-        Station Montmartre = new Station("Montmartre",1,3,false,new Liaison(90,false,4), new Liaison(120,false,2),30);
-        Station Louvre = new Station("Louvre",1,4,false,new Liaison(150,false,5), new Liaison(90,false,3),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station La_Defense = new Station("La Défense",2,7,false,new Liaison(60,false,8), null,30);
-        Station Invalides = new Station("Invalides",2,8,false,new Liaison(210,false,4), new Liaison(60,false,7),30);
-        Station Louvre2 = new Station("Louvre",2,4,false,new Liaison(30,false,10), new Liaison(210,false,8),30);
-        List<Integer> trajet =  Arrays.asList(chatelet_les_halles.getNum_station(),Pigalle.getNum_station(),Montmartre.getNum_station(),Louvre.getNum_station(),Louvre2.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Louvre.getNum_station(),Bercy.getNum_station(),Arc_de_Triomphe.getNum_station());
-        var ln= new Metro();
-        List<Station> list =  Arrays.asList(La_Defense);
-        var result = ln.Itineraire_passant_liste_point(chatelet_les_halles,Arc_de_Triomphe,list);
+        Metro metro = new Metro();
+
+        Station chatelet_les_halles = metro.getStations().get(0);
+        Station Pigalle = metro.getStations().get(1);
+        Station Montmartre = metro.getStations().get(2);
+        Station Louvre = metro.getStations().get(3);
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+        Station La_Defense = metro.getStations().get(6);
+        Station Invalides = metro.getStations().get(7);
+        Station Louvre2 = metro.getStations().get(8);
+        List<Integer> trajet =  Arrays.asList(chatelet_les_halles.getNum_station(),Pigalle.getNum_station(),Montmartre.getNum_station(),Louvre.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Bercy.getNum_station(),Arc_de_Triomphe.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        List<Integer> list =  Arrays.asList(La_Defense.getNum_station());
+        var result = algorithme.algorithmeSelonPoint(chatelet_les_halles,Arc_de_Triomphe,list);
         assertThat(result).isEqualTo(trajet);
     }
     @Test
     @DisplayName("itineraire passant par liste de point simple (1 point à l'opposée sens inverse)")
     public void itinerairePassantParUnPointOpposéeSensinverse(){
-        Station chatelet_les_halles = new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Pigalle = new Station("Pigalle",1,2,false,new Liaison(120,false,3), new Liaison(120,false,1),30);
-        Station Montmartre = new Station("Montmartre",1,3,false,new Liaison(90,false,4), new Liaison(120,false,2),30);
-        Station Louvre = new Station("Louvre",1,4,false,new Liaison(150,false,5), new Liaison(90,false,3),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station La_Defense = new Station("La Défense",2,7,false,new Liaison(60,false,8), null,30);
-        Station Invalides = new Station("Invalides",2,8,false,new Liaison(210,false,4), new Liaison(60,false,7),30);
-        Station Louvre2 = new Station("Louvre",2,4,false,new Liaison(30,false,10), new Liaison(210,false,8),30);
-        List<Integer> trajet =  Arrays.asList(Arc_de_Triomphe.getNum_station(),Bercy.getNum_station(),Louvre.getNum_station(),Louvre2.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Louvre.getNum_station(),Montmartre.getNum_station(),Pigalle.getNum_station(),chatelet_les_halles.getNum_station());
-        var ln= new Metro();
-        List<Station> list =  Arrays.asList(La_Defense);
-        var result = ln.Itineraire_passant_liste_point(Arc_de_Triomphe,chatelet_les_halles,list);
+        Metro metro = new Metro();
+
+        Station chatelet_les_halles = metro.getStations().get(0);
+        Station Pigalle = metro.getStations().get(1);
+        Station Montmartre = metro.getStations().get(2);
+        Station Louvre = metro.getStations().get(3);
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+        Station La_Defense = metro.getStations().get(6);
+        Station Invalides = metro.getStations().get(7);
+        Station Louvre2 = metro.getStations().get(8);
+        List<Integer> trajet =  Arrays.asList(Arc_de_Triomphe.getNum_station(),Bercy.getNum_station(),Louvre.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Montmartre.getNum_station(),Pigalle.getNum_station(),chatelet_les_halles.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        List<Integer> list =  Arrays.asList(La_Defense.getNum_station());
+        var result = algorithme.algorithmeSelonPoint(Arc_de_Triomphe,chatelet_les_halles,list);
         assertThat(result).isEqualTo(trajet);
     }
 
     @Test
     @DisplayName("itineraire passant par liste de point simple (2 points à l'opposée)")
     public void itinerairePassantPar2PointsOpposées(){
-        Station chatelet_les_halles = new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Pigalle = new Station("Pigalle",1,2,false,new Liaison(120,false,3), new Liaison(120,false,1),30);
-        Station Montmartre = new Station("Montmartre",1,3,false,new Liaison(90,false,4), new Liaison(120,false,2),30);
-        Station Louvre = new Station("Louvre",1,4,false,new Liaison(150,false,5), new Liaison(90,false,3),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
+        Metro metro = new Metro();
+        Station chatelet_les_halles = metro.getStations().get(0);
+        Station Pigalle = metro.getStations().get(1);
+        Station Montmartre = metro.getStations().get(2);
+        Station Louvre = metro.getStations().get(3);
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+        Station La_Defense = metro.getStations().get(6);
+        Station Invalides = metro.getStations().get(7);
+        Station Louvre2 = metro.getStations().get(8);
+        Station Billancourt = metro.getStations().get(9);
+        Station Grigny = metro.getStations().get(10);
+        Station Pantheon = metro.getStations().get(11);
+        Station Montmartre2 = metro.getStations().get(14);
+        Station Grigny_la_grande_borne2 = metro.getStations().get(15);
+        Station Bastille = metro.getStations().get(16);
 
-        Station La_Defense = new Station("La Défense",2,7,false,new Liaison(60,false,8), null,30);
-        Station Invalides = new Station("Invalides",2,8,false,new Liaison(210,false,4), new Liaison(60,false,7),30);
-        Station Louvre2 = new Station("Louvre",2,4,false,new Liaison(30,false,10), new Liaison(210,false,8),30);
-        Station Billancourt = new Station("Billancourt",2,9,false,new Liaison(120,false,10), new Liaison(30,false,4),30);
-        Station Grigny = new Station("Grigny-la-grande-Borne",2,10,false,new Liaison(120,false,11), new Liaison(120,false,9),30);
-        Station Pantheon = new Station("Panthéon",2,11,false,null, new Liaison(120,false,10),30);
-        Station Montmartre2 = new Station("Montmartre",3,3,false,new Liaison(250,false,10), new Liaison(180,false,13),30);
-        Station Grigny_la_grande_borne2 = new Station("Grigny-la-grande-borne",3,10,false,new Liaison(90,false,14), new Liaison(250,false,3),30);
+        List<Integer> trajet =  Arrays.asList(chatelet_les_halles.getNum_station(),Pigalle.getNum_station(),Montmartre.getNum_station(),
+                Louvre.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),
+                Louvre2.getNum_station(),Billancourt.getNum_station(),Grigny_la_grande_borne2.getNum_station(),Pantheon.getNum_station(),Pantheon.getNum_station(),Grigny.getNum_station(),
+                Bastille.getNum_station(),Bercy.getNum_station(),Arc_de_Triomphe.getNum_station());
+        var algorithme = new Algorithme();
 
-        List<Integer> trajet =  Arrays.asList(chatelet_les_halles.getNum_station(),Pigalle.getNum_station(),Montmartre.getNum_station(),Montmartre2.getNum_station(),Grigny_la_grande_borne2.getNum_station(),Grigny.getNum_station(),Pantheon.getNum_station(),Grigny.getNum_station(),Billancourt.getNum_station(),Louvre2.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Louvre.getNum_station(),Bercy.getNum_station(),Arc_de_Triomphe.getNum_station());
-        var ln= new Metro();
-
-        List<Station> list =  Arrays.asList(La_Defense,Pantheon);
-        var result = ln.Itineraire_passant_liste_point(chatelet_les_halles,Arc_de_Triomphe,list);
+        List<Integer> list =  Arrays.asList(La_Defense.getNum_station(),Pantheon.getNum_station());
+        List result = algorithme.algorithmeSelonPoint(chatelet_les_halles,Arc_de_Triomphe,list);
         assertThat(result).isEqualTo(trajet);
     }
     @Test
     @DisplayName("itineraire passant par liste de point simple (2 points à l'opposée) nsens contraire")
     public void itinerairePassantPar2PointsOpposéesSensContraire(){
-        Station chatelet_les_halles = new Station("Chatelet les Halles",1,1,false, new Liaison(120,false,2), null,30);
-        Station Pigalle = new Station("Pigalle",1,2,false,new Liaison(120,false,3), new Liaison(120,false,1),30);
-        Station Montmartre = new Station("Montmartre",1,3,false,new Liaison(90,false,4), new Liaison(120,false,2),30);
-        Station Louvre = new Station("Louvre",1,4,false,new Liaison(150,false,5), new Liaison(90,false,3),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-
-        Station La_Defense = new Station("La Défense",2,7,false,new Liaison(60,false,8), null,30);
-        Station Invalides = new Station("Invalides",2,8,false,new Liaison(210,false,4), new Liaison(60,false,7),30);
-        Station Louvre2 = new Station("Louvre",2,4,false,new Liaison(30,false,10), new Liaison(210,false,8),30);
-        Station Billancourt = new Station("Billancourt",2,9,false,new Liaison(120,false,10), new Liaison(30,false,4),30);
-        Station Grigny = new Station("Grigny-la-grande-Borne",2,10,false,new Liaison(120,false,11), new Liaison(120,false,9),30);
-        Station Pantheon = new Station("Panthéon",2,11,false,null, new Liaison(120,false,10),30);
-        Station Montmartre2 = new Station("Montmartre",3,3,false,new Liaison(250,false,10), new Liaison(180,false,13),30);
-        Station Grigny_la_grande_borne2 = new Station("Grigny-la-grande-borne",3,10,false,new Liaison(90,false,14), new Liaison(250,false,3),30);
-
-        List<Integer> trajet =  Arrays.asList(Arc_de_Triomphe.getNum_station(),Bercy.getNum_station(),Louvre.getNum_station(),Louvre2.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Billancourt.getNum_station(),Grigny.getNum_station(),Pantheon.getNum_station(),Grigny.getNum_station(),Grigny_la_grande_borne2.getNum_station(),Montmartre2.getNum_station(),Montmartre.getNum_station(),Pigalle.getNum_station(),chatelet_les_halles.getNum_station());
+        Metro metro = new Metro();
+        Station chatelet_les_halles = metro.getStations().get(0);
+        Station Pigalle = metro.getStations().get(1);
+        Station Montmartre = metro.getStations().get(2);
+        Station Louvre = metro.getStations().get(3);
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+        Station La_Defense = metro.getStations().get(6);
+        Station Invalides = metro.getStations().get(7);
+        Station Louvre2 = metro.getStations().get(8);
+        Station Billancourt = metro.getStations().get(9);
+        Station Grigny = metro.getStations().get(10);
+        Station Pantheon = metro.getStations().get(11);
+        Station Montmartre2 = metro.getStations().get(14);
+        Station Grigny_la_grande_borne2 = metro.getStations().get(15);
+        Station Bastille = metro.getStations().get(16);
+        List<Integer> trajet =  Arrays.asList(Arc_de_Triomphe.getNum_station(),Bercy.getNum_station(),Bastille.getNum_station(),Grigny.getNum_station(),Pantheon.getNum_station(),Pantheon.getNum_station(),Grigny.getNum_station(),Billancourt.getNum_station(), Louvre2.getNum_station(),Invalides.getNum_station(),La_Defense.getNum_station(),Invalides.getNum_station(),Louvre2.getNum_station(),Montmartre.getNum_station(),Pigalle.getNum_station(), chatelet_les_halles.getNum_station());
         var ln= new Metro();
 
-        List<Station> list =  Arrays.asList(Pantheon,La_Defense);
-        var result = ln.Itineraire_passant_liste_point(chatelet_les_halles,Arc_de_Triomphe,list);
+        List<Integer> list =  Arrays.asList(Pantheon.getNum_station(),La_Defense.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        var result = algorithme.algorithmeSelonPoint(Arc_de_Triomphe,chatelet_les_halles,list);
         assertThat(result).isEqualTo(trajet);
     }
     @Test
     @DisplayName("itineraire le plus rapide station arrivee et depart different")
     public void itineraireRapideStationArriveeEtDepartDiff(){
-        Station x =  new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station y =new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station Arc_de_Triomphe = new Station("Arc de triomphe",1,6,false,null, new Liaison(120,false,5),30);
-        Station Bercy = new Station("Bercy",1,5,false,new Liaison(120,false,6), new Liaison(150,false,4),30);
-        List<Station> list = Arrays.asList(Arc_de_Triomphe,Bercy);
-        var trajet= new Metro();
-        assertThatThrownBy(()-> trajet.Itineraire_passant_liste_point(x, y,list)).isExactlyInstanceOf(IllegalArgumentException.class);
+        Metro metro = new Metro();
+        Station Bercy =  metro.getStations().get(4);
+        Station Arc_de_Triomphe = metro.getStations().get(5);
+
+        List<Integer> list = Arrays.asList(Arc_de_Triomphe.getNum_station(), Bercy.getNum_station());
+        Algorithme algorithme = new Algorithme();
+        assertThatThrownBy(()-> algorithme.algorithmeSelonPoint(Arc_de_Triomphe, Arc_de_Triomphe,list)).isExactlyInstanceOf(IllegalArgumentException.class);
     }
-    //Pt des tests sur des itineraires sur correspondance
 }
